# proc-macro-workshop

./: main.rs
builder/: Cargo.toml
builder/src/: lib.rs
builder/tests/: 06-optional-field.rs
debug/: Cargo.toml
debug/src/: lib.rs
seq/: Cargo.toml
seq/src/: lib.rs
seq/tests/: progress.rs
sorted/: Cargo.toml
sorted/src/: lib.rs
