[package]
name = "derive_debug"
version = "0.0.0"
autotests = false
edition = "2021"
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
syn = { version = "2.0.39", features = ["extra-traits", "full", "visit", "visit-mut"] }
quote = { version = "1.0.33" }
proc-macro2 = { version = "1.0.69" }
